# lmb

./: Cargo.toml  Dockerfile  GUIDED_TOUR.md  README.md  build.rs  build.sh  deny.toml  docker-compose.yaml  guide_test.go
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker.yaml  workflow.yaml
benches/: bench.rs
benches/fixtures/: add.lua  json.lua  pool.lua  store-minimal.lua  store-update.lua  store.lua  toml.lua  true.lua  yaml.lua
docs/: guided-tour.md
docs/superpowers/plans/: 2026-03-17-fs-tail.md  2026-06-01-daemon-mode.md
docs/superpowers/specs/: 2026-03-16-distributed-network-design.md  2026-03-17-fs-tail-design.md  2026-06-01-daemon-mode-design.md
guides/: lua.md  serve.md
lua-examples/: count-bytes.lua  crypto.lua  echo.lua  env.lua  http-client.lua  join-all.lua  sleep.lua  store.lua
lua-examples/serve-files/: last.lua  mw1.lua  mw2.lua
rfcs/: issue-56.md  rfc-90.md
src/: daemon.rs  error.rs  eval.rs  example.rs  expect_lua_function.md  guide.rs  lib.rs  lua_binding.rs  lua_io.rs  main.rs  permission.rs  pool.rs  reader.rs  serve.rs  source.rs  stmt.rs  store.rs  tour.rs
src/bindings/: coroutine.rs  crypto.rs  fs.rs  globals.rs  http.rs  io.rs  json.rs  json_path.rs  logging.rs  mod.rs  regex.rs  store.rs  time.rs  toml.rs  yaml.rs
src/bindings/fixtures/: all-settled.lua  crypto.lua  http-get.lua  http-post.lua  json-path.lua  json.lua  race.lua  read-all.lua  read-unicode-all.lua  read-unicode-line.lua  read-unicode.lua  store-update.lua  toml.lua  yaml.lua
src/fixtures/: add.lua  closure.lua  echo-request.lua  env.lua  error.lua  headers-status-code.lua  hello.lua  http-get.lua  infinite.lua  invalid-format.lua  invalid-status-code.lua  read-count.lua  read-line.lua  read-number.lua  read-unicode.lua  serve.lua  store.lua  value-as-error.lua
src/fixtures/bindings/: crypto-errors.lua  crypto.lua  fs.lua  http-concurrent-fetch.lua  http-parse-path.lua  http-post.lua  logging.lua  regex.lua  time.lua
src/fixtures/bindings/coroutine/: join-all.lua
src/fixtures/bindings/crypto/: base64-roundtrip.lua  des-cbc.lua  des-ecb.lua  hash-functions.lua
src/fixtures/bindings/fs/: closed-file.lua  exists.lua  flush.lua  lines-shorthand.lua  lines.lua  list.lua  open-ap.lua  open-append.lua  open-invalid-mode.lua  open-nonexistent.lua  open-read.lua  open-rw.lua  open-wp.lua  open-write.lua  permission-denied.lua  read-bytes-eof.lua  read-bytes-partial.lua  read-bytes.lua  read-invalid-format.lua  read-line.lua  read-number-eof.lua  read-number-nan.lua  read-number.lua  read-permission-denied-some.lua  remove.lua  rename.lua  seek-cur-end.lua  seek-invalid.lua  seek.lua  tail-basic.lua  tail-break.lua  tail-file-not-exists.lua  tail-permission-denied.lua  tail-rotation.lua  tail-wait-new-lines.lua  type.lua  write-invalid.lua  write-no-permissions.lua  write-number.lua  write-permission-denied.lua
src/fixtures/bindings/globals/: sleep-zero.lua  sleep.lua
src/fixtures/bindings/io/: read-unicode-all.lua
src/fixtures/bindings/store/: store-del.lua  store-keys.lua  store-no-store.lua  store-tx-rollback.lua  store-tx.lua  store-unicode-keys.lua  store-update-missing-keys.lua  store-update-preserves.lua  store-update.lua  store-without-connection.lua  store.lua
src/fixtures/core/: add.lua  env.lua  hello.lua  multi.lua  no-export.lua
src/fixtures/daemon/: always-error.lua  log-watch.lua  return-immediately.lua
src/fixtures/errors/: callback-error.lua  callback-expr-error.lua  error-expr.lua  error-value-expr.lua  error-value.lua  error.lua  syntax-error.lua
src/fixtures/pool/: return-no-store.lua  return-true.lua  stateful-counter.lua
src/fixtures/serve/: serve-base64.lua  serve-echo.lua
src/lua_binding/: concurrency.rs  coroutine.rs  crypto.rs  http.rs  json.rs  logging.rs  mod.rs  read.rs
src/lua_binding/fixtures/: crypto.lua  headers.lua  html.lua  http-json.lua  http-post.lua  join-all.lua  json.lua  logging.lua  race.lua  read-binary.lua
src/migrations/: 0001-initial.pg.sql  0001-initial.sql
src/store/: backend.rs  mod.rs  postgres.rs  sqlite.rs  stmt.rs
src/store/fixtures/: get-put.lua  nested-update.lua  reuse.lua  rollback-when-error.lua  update.lua
tests/: cli_test.rs  error_integration_test.rs  guided_tour.rs  integration_test.rs
