[package]
name = "lmb"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.6.5"
futures = "0.3.31"
mlua = { version = "0.11.1", features = ["async", "luau", "serde"] }
parking_lot = "0.12.4"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", default-features = false, features = ["io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
test-case = "3.3.1"

[[bench]]
name = "bench"
harness = false
